feat(observability): begin to integration task runs into UI
